--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,6 @@
   "require": {
     "ext-json": "*",
     "symfony/property-access": "^3.4|^4.4|5.*",
-    "psr/container": "^2.0"
+    "psr/container": "^1.0|^2.0"
   }
 }
